# torch-tomogram

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: reconstruct_from_aretomo.py  reconstruct_from_etomo.py  shrec.py
src/torch_tomogram/: __init__.py  datamodel.py  tomogram.py
tests/: test_torch_tomogram.py
